shared/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nsready-tier2
  labels:
    name: nsready-tier2
    environment: production
